<resources>
    <string name="general_app_title">Data Wallet</string>
    <string name="general_close">Close</string>
    <string name="general_ok">OK</string>
    <string name="general_confirm">Confirm</string>
    <string name="general_all">All</string>
    <string name="general_my_profile">My Profile </string>
    <string name="general_id_cards">ID cards</string>
    <string name="general_health">Health </string>
    <string name="general_travel">Travel</string>
    <string name="general_receipts">Receipts</string>
    <string name="general_valid_until">Valid until</string>
    <string name="general_scan">Scan</string>
    <string name="general_notification">Notification</string>
    <string name="general_create">Create</string>
    <string name="general_data">Data</string>
    <string name="general_data_agreement">Data agreement</string>
    <string name="general_connections">Connections</string>
    <string name="general_no">No</string>
    <string name="general_yes">Yes</string>
    <string name="general_reject">Reject</string>
    <string name="general_accept">Accept</string>
    <string name="general_add_data">Add data</string>
    <string name="general_preferences">Preferences</string>
    <string name="general_view">View</string>
    <string name="general_registration">registration</string>
    <string name="general_nil">Nil</string>
    <string name="general_edit">Edit</string>
    <string name="scan_turn_on_flash_light">Turn on flash light</string>
    <string name="scan_turn_off_flash_light">Turn off flash light</string>
    <string name="scan_position_qr_code">Position QR Code</string>
    <string name="scan_could_not_open_your_camera">Could not open your camera</string>
    <string name="scan_could_not_read_your_image">Could not read your image. Try another image</string>
    <string name="scan_could_not_open_scan_content">Sorry, could not open scan content</string>
    <string name="scan_could_not_detect_camera">Could not detect camera</string>
    <string name="scan_you_requested_the_following_data_to_be_issued_by_choosing_accept_you_agree_to_add_the_data_to_your_data_wallet">You requested the following data to be issued. By choosing accept you agree to add the data to your Data Wallet.</string>
    <string name="connection_no_connections_available">No connections available</string>
    <string name="connection_no_data_available">No data available</string>
    <string name="connection_connection_already_existing">Connection already existing</string>
    <string name="connection_loading_indy_library">Loading Indy Library...</string>
    <string name="connection_exchange_data">Exchange data</string>
    <string name="connection_add_connection">Add connection</string>
    <string name="connection_search_data_wallet">Search Data Wallet...</string>
    <string name="connection_search_organisations">Search organisations...</string>
    <string name="connection_configuring_pool">Configuring pool...</string>
    <string name="connection_finishing">Finishing...</string>
    <string name="connection_configuring">Configuring...</string>
    <string name="connection_organisations">Organisations</string>
    <string name="connection_logo">Logo</string>
    <string name="connection">Exchange</string>
    <string name="connection_choose_organisation">Choose organisation</string>
    <string name="connection_data_agreement">Data agreement</string>
    <string name="connection_insufficient_data_requested">Insufficient data requested</string>
    <string name="connection_requests">Requests</string>
    <string name="connection_connection_success">Connection success</string>
    <string name="connection_overview">Overview</string>
    <string name="connection_delete">Delete</string>
    <string name="connection_version_android">Version : %1$s</string>
    <string name="connection_unexpected_error_please_try_again">Unexpected error. Please try again.</string>
    <string name="connection_third_party_data_sharing">Third-party Data Sharing</string>
    <string name="connect_by_choosing_confirm_you_agree_to_the_requested_data_to_org_name_android">By choosing confirm you agree to share the requested data to %1$s</string>
    <string name="connect_allow_org_name_to_connect_with_you_android">Allow <b>%1$s</b> to connect with you</string>
    <string name="connect_are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="connect_new_certificate_is_added_to_your_data_wallet">New certificate is added to your Data Wallet</string>
    <string name="connect_new_exchange_data_request_received">New exchange data request received</string>
    <string name="notification_channel_success_messages">Success messages</string>
    <string name="notification_channel_id_success">success_messages</string>
    <string name="notification_channel_id_default">NotificationChannel</string>
    <string name="setting_settings">Settings</string>
    <string name="settings_network">Network</string>
    <string name="settings_powered_by_igrant_io_sweden">Powered by iGrant.io, Sweden</string>
    <string name="settings_">Data Wallet</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_certificate_detail">Certificate Detail</string>
    <string name="settings_connect">Connect</string>
    <string name="settings_allow">Allow</string>
    <string name="settings_to_connect_with_you">to connect with you</string>
    <string name="settings_data">Data</string>
    <string name="settings_english">English </string>
    <string name="settings_french">French </string>
    <string name="settings_swedish">Swedish</string>
    <string name="settings_danish">Danish</string>
    <string name="settings_norweigian">Norweigian</string>
    <string name="settings_finnish">Finnish</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_language">LANGUAGE</string>
    <string name="settings_ledger_network">LEDGER NETWORK</string>
    <string name="settings_supported_protocols">Supported Protocols</string>
    <string name="settings_aries_interoperability_protocols">Aries Interoperability Protocols</string>
    <string name="settings_terms_conditions">Terms And Conditions</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_about">About</string>
    <string name="settings_about_the_app">About this app</string>
    <string name="settings_terms_of_service">Terms of service</string>
    <string name="settings_invite_a_friend">Invite a Friend</string>
    <string name="settings_rate_the_app">Rate the App</string>
    <string name="data_received_data">Received data</string>
    <string name="data_received_offer_credentials">Received offer credential</string>
    <string name="data_received_offer_credential_from_organisation">Received offer credential from organisation.</string>
    <string name="data_received_exchange_request">Received exchange request</string>
    <string name="data_data_exchange">Data exchange</string>
    <string name="data_your_data_certificate_is_available_to_be_added_to_your_data_wallet_click_accept_to_confirm">Your data certificate is available to be added to your Data Wallet. Click accept to confirm.</string>
    <string name="data_choose_the_organisation_to_add_data_to_the_data_wallet_for_adding_new_organisations_click_above">Choose the organisation to add data to the Data Wallet. For adding new organisations, click + above</string>
    <string name="data_for_adding_new_organisations_click_above">For adding new organisations, click + above</string>
    <string name="data_choose_and_connect_to_the_organisation_to_add_data_or_exchange_data">Choose and connect to the organisation to add data or exchange data</string>
    <string name="data_remove_data_card">Remove data card</string>
    <string name="data_data_has_been_shared_with_organization_successfully_android">Data has been shared with %1$s successfully</string>
    <string name="data_data_has_been_shared_successfully">Data has been shared successfully</string>
    <string name="data_read_more">Read more</string>
    <string name="data_read_less">..Read less</string>
    <string name="data_do_you_want_to_cancel_the_exchange_request">Do you want to cancel the exchange request?</string>
    <string name="data_do_you_want_to_delete_the_certificate">Do you want to delete the certificate?</string>
    <string name="data_confirmation">Confirmation</string>
    <string name="data_no_new_notification_available">No new notification available</string>
    <string name="data_no_connections_available">No connections available</string>
    <string name="data_search">Search</string>
    <string name="data_successfully_added_data_to_the_data_wallet">Successfully added data to the Data Wallet.</string>
    <string name="data_data_offer_accepted_successfully">Data offer accepted successfully.</string>
    <string name="data_do_you_want_to_remove_the_offer_credential">Do you want to remove the offer credential?</string>
    <string name="data_organisation_removed_successfully">Organisation removed successfully</string>
    <string name="data_do_you_want_to_remove_the_organisation">Do you want to remove the organisation?</string>
    <string name="data_no_related_organisation_found_you_may_have_removed_the_organisation">No related organisation found. You may have removed the organisation</string>
    <string name="data_remove_organisation">Remove Organisation</string>
    <string name="data_taking_longer_than_expected_please_try_again">Taking longer than expected? Please try again</string>
    <string name="data_invalid_ledger_you_can_choose_proper_ledger_from_settings">Invalid Ledger. You can choose proper ledger from settings</string>
    <string name="data_scan_the_qr_code">Scan the QR code</string>
    <string name="data_share_data">Share Data</string>
    <string name="data_your_data_wallet_app_is_outdated_please_update">Your Data Wallet app is outdated. Please update.</string>
    <string name="data_update">Update</string>
    <string name="data_no_data_available_click_next_to_data_wallet_to_begin_adding_data">No data available. Click \'+\' next to Data Wallet to begin adding data</string>
    <string name="data_no_data_available_click_next_to_id_cards_to_begin_adding_an_id_card_to_your_data_wallet">No data available. Click \'+\' next to ID Cards to begin adding an ID Card to your Data Wallet</string>
    <string name="data_by_choosing_accept_you_agree_to_add_the_data_to_your_data_wallet">By choosing accept you agree to add the data to your Data Wallet</string>
    <string name="data_click_next_to_organisations_to_connect_to_an_organisation_to_add_data">Click \'+\' next to Organisations to connect to an organisation to add data.</string>
    <string name="cards_id_cards">ID Cards</string>
    <string name="cards_first_name">First name</string>
    <string name="cards_last_name">Last name</string>
    <string name="cards_gender">Gender</string>
    <string name="cards_country">Country</string>
    <string name="cards_nationality">Nationality</string>
    <string name="cards_personal_number">Personal Number</string>
    <string name="cards_date_of_birth">Date of birth</string>
    <string name="cards_passport_number">Passport number</string>
    <string name="certificate_data_agreement_policy">Data Agreement Policy</string>
    <string name="certificate_verified_data_agreement">Verified Data Agreement</string>
    <string name="certificate_controller_decentralised_identifier">Controller Decentralised Identifier (DID)</string>
    <string name="certificate_signature_data_agreement"><b>Signature : </b> Data Agreement</string>
    <string name="welcome_here_you_can_view_the_history_of_all_data_agreement_signed">Here, you  can view the history of all data agreement signed.</string>
    <string name="welcome_you_havent_shared_any_data_yet">You haven\'t shared any data yet.</string>
</resources>