<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/primary_background"
    android:padding="10dp">

    <ProgressBar
        android:id="@+id/pbLoader"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/ivLock"
        android:src="@drawable/ic_secured_lock_24"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tvHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/certificate_verified_data_agreement"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="@+id/pbLoader"
        app:layout_constraintEnd_toStartOf="@+id/pbLoader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pbLoader" />

    <TextView
        android:id="@+id/txtDid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/certificate_controller_decentralised_identifier"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbLoader" />

    <TextView
        android:id="@+id/tvDid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/certificate_verified_data_agreement"
        android:textAlignment="viewStart"
        android:textColor="@color/textColorLight"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDid" />

    <TextView
        android:id="@+id/tvSignature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/certificate_signature_data_agreement"
        android:textAlignment="viewStart"
        android:textColor="@color/textColorLight"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDid" />

</androidx.constraintlayout.widget.ConstraintLayout>