<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <TextView
        android:id="@+id/tvDataWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:textSize="@dimen/text_size_xx_large"
        android:text="@string/general_app_title"
        android:paddingBottom="5dp"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/tvDataWallet"
        app:layout_constraintTop_toTopOf="@+id/tvDataWallet"
        app:layout_constraintBottom_toBottomOf="@+id/tvDataWallet"
        android:id="@+id/ivAdd"
        android:src="@drawable/ic_add_circle_black"
        android:padding="8dp" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/search_bg"
        android:hint="@string/data_search"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_search_grey"
        android:padding="10dp"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvDataWallet"
        app:layout_constraintTop_toBottomOf="@+id/tvDataWallet" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCertificates"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etSearch"
        app:layout_constraintTop_toBottomOf="@+id/etSearch"
        app:layout_constraintStart_toStartOf="@+id/tvDataWallet"
        tools:listitem="@layout/item_certificate" />

    <LinearLayout
        android:id="@+id/llErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/bgColor"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch">

        <!--        <ImageView-->
        <!--            android:layout_width="40dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:src="@drawable/ic_no_data"-->
        <!--            android:contentDescription="@string/txt_no_data_available_in_home"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/data_no_data_available_click_next_to_data_wallet_to_begin_adding_data"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llProgressBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvExchangeData"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/primary_button_background"
        android:drawableStart="@drawable/ic_scan"
        android:drawablePadding="5dp"
        android:elevation="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:visibility="gone"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/data_share_data"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>