<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bgColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/Black" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btAccept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/connection_logo"
                    android:src="@drawable/images" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvOrgName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:justificationMode="inter_word"
                android:text=""
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/Black"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cvLogo"
                app:layout_constraintTop_toTopOf="@+id/cvLogo" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:justificationMode="inter_word"
                android:text=""
                android:textColor="@color/Black"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="@+id/cvLogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cvLogo"
                app:layout_constraintTop_toBottomOf="@+id/tvOrgName" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:justificationMode="inter_word"
                android:text="@string/scan_you_requested_the_following_data_to_be_issued_by_choosing_accept_you_agree_to_add_the_data_to_your_data_wallet"
                android:textColor="@color/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvLogo" />

            <TextView
                android:id="@+id/tvHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text=""
                android:textColor="@color/textColor"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvDesc"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAttributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toTopOf="@+id/clAgreement"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHead" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAgreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:visibility="visible"
                android:background="@drawable/primary_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvAttributes" >

                <TextView
                    android:id="@+id/tvAgreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_background"
                    android:padding="10dp"
                    android:text="@string/certificate_data_agreement_policy"
                    android:textAlignment="viewStart"
                    android:textColor="@color/textColorVeryLight"
                    android:textSize="@dimen/text_size_normal"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivDataAgreement"
                    android:layout_width="@dimen/forward_arrow_width"
                    android:layout_height="@dimen/forward_arrow_height"
                    android:src="@drawable/ic_arrow_forward"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="@dimen/forward_arrow_padding"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clAgreement" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/bg_gradient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btAccept"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAccept"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/primary_button_background"
        android:enabled="true"
        android:textAllCaps="false"
        android:text="@string/general_accept"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llProgressBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>